# rss-generator

./: README.md  main.py  pyproject.toml  requirements.txt  rssgen.py
.github/workflows/: main.yml
