[tool.poetry]
name = "rss-generator"
version = "0.1.0"
description = "Generate RSS feeds"
authors = ["jarp0l <jarp0l@secret.fyi>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.6"
feedgen = "^0.9.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
